<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@android:color/holo_blue_bright"
        android:gravity="start"
        android:text="@string/gravity_start"/>
    <TextView
        android:id="@+id/tv2"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@android:color/holo_green_light"
        android:gravity="center"
        android:text="@string/gravity_center"/>
    <TextView
        android:id="@+id/tv3"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@android:color/holo_purple"
        android:gravity="center_horizontal"
        android:text="@string/gravity_center_horizontal"/>
    <TextView
        android:id="@+id/tv4"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@android:color/holo_red_light"
        android:gravity="end"
        android:text="@string/gravity_end"/>
    <TextView
        android:id="@+id/tv5"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@android:color/holo_green_light"
        android:gravity="start"
        android:layout_gravity="start"
        android:text="@string/layout_gravity_start"/>
    <TextView
        android:id="@+id/tv6"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@android:color/holo_purple"
        android:gravity="start"
        android:layout_gravity="center"
        android:text="@string/layout_gravity_center"/>
    <TextView
        android:id="@+id/tv7"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@android:color/holo_red_light"
        android:gravity="start"
        android:layout_gravity="end"
        android:text="@string/layout_gravity_end"/>
    <TextView
        android:id="@+id/tv8"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@android:color/holo_red_light"
        android:gravity="start"
        android:layout_gravity="end"
        android:text="@string/nama_saya"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tv9"
            android:layout_width="100dp"
            android:layout_height="200dp"
            android:background="@android:color/holo_red_light"
            android:gravity="start"
            android:layout_gravity="end"
            android:text="@string/horizontal"/>
        <TextView
            android:id="@+id/tv10"
            android:layout_width="100dp"
            android:layout_height="200dp"
            android:background="@android:color/holo_purple"
            android:gravity="start"
            android:layout_gravity="end"
            android:text="@string/horizontal"/>
    </LinearLayout>


</LinearLayout>